# SLAM-CIN0051

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Makefile  README.md  conanfile.txt  venv
include/slam/backend/: backend.hpp  loop_closure.hpp  map.hpp
include/slam/common/: common.hpp
include/slam/frontend/: common.hpp  feature_detector.hpp  feature_matcher.hpp  pose_estimator.hpp  simple_pose_recover.hpp
include/slam/model/: model.hpp
include/slam/postprocessing/: visualizer.hpp
include/slam/preprocessing/: preprocessor.hpp
src/: CMakeLists.txt
src/backend/: CMakeLists.txt  loop_closure.cpp
src/frontend/: CMakeLists.txt  common.cpp  feature_detector.cpp  feature_matcher.cpp  pose_estimator.cpp  simple_pose_recover.cpp
src/model/: CMakeLists.txt  model.cpp
src/preprocessing/: CMakeLists.txt  preprocessor.cpp
test/: CMakeLists.txt
test/backend/: CMakeLists.txt  test_loop_closure.cpp
test/config/: loop_closure.yaml
test/data/: camera.yml  feature_detector.yml  feature_matcher.yml  loop_closure.yml
test/data/images/: timestamps.txt
test/frontend/: CMakeLists.txt  test_feature_detector.cpp  test_feature_matcher.cpp  test_pose_estimator.cpp
test/preprocessing/: CMakeLists.txt  test_preprocessing.cpp
tools/cli/: CMakeLists.txt  cli.cpp
